--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -77,6 +77,7 @@
 		import * as CFG from './configurator/configurator.js';
 		import './configurator/map.js';
 		import './configurator/buildings.js';
+		import './configurator/daynight.js';
 		import './configurator/people.js';
 		import './configurator/health.js';
 		import './configurator/graphics.js';
