Autofacing health indicators, circle formation of people

--- a/agents/ply-to-agent.html
+++ b/agents/ply-to-agent.html
@@ -94,7 +94,7 @@
 							'020',	// 3:NIPS in vertex shader
 							'111',	// 4:BELLY in vertex shader
 							'000',	// 5:HAIR in vertex shader
-							'---',	// 6:UNUSED in vertex shader
+							'100',	// 6:OVERHEAD in vertex shader
 							'002',	// 7:LEGS in vertex shader
 							'202',	// 8:KNEES in vertex shader
 							'022',	// 9:FEET in vertex shader
