--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -7,6 +7,9 @@
 
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
+	<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="icons/favicon.ico" type="image/x-icon">
+
 	<meta name="description" content="COVID-19 Configurator">
 	<meta name="keywords" content="COVID-19, Coronavirus, SARS-CoV-2, Coronavirus disease 2019, Configurator">
 	<meta name="author" content="Pavel Boytchev">
