Pause and resume simulation #51

--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -22,7 +22,9 @@
 <body>
 	<div id="container"></div>
 	<div id="hud">
-		<span id="time" style = "float: right; margin-right:1em"></span>
+		<span id="playpause" class="link" style = "float: right; margin-right:1em">
+			<span id="time">00:00:00</span>&nbsp;<img id="play" src="icons/play.svg"><img id="pause" src="icons/pause.svg">
+		</span>
 		<img src="icons/fps.svg"><span id="fps"></span> &middot;
 		<img src="icons/people.svg"><span id="agents"></span> &middot;
 		<a class="link" href="covid-19-configurator.html"><img src="icons/gear.svg">config</a>
