Made the default configurator more user friendly

--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -46,13 +46,13 @@
 			<br>
 			<button id="fav" class="filter">My</button>
 			<button id="all" class="filter">All</button>
-			<button id="map" class="filter internal">Map</button>
-			<button id="building" class="filter internal">Buildings</button>
-			<button id="people" class="filter internal">People</button>
-			<button id="daynight" class="filter internal">Day & night</button>
-			<button id="health" class="filter internal">Health</button>
-			<button id="misc" class="filter internal">Misc</button>
-			<select id="tags" class="filter internal"></select>
+			<button id="map" class="filter ">Map</button>
+			<button id="building" class="filter ">Buildings</button>
+			<button id="people" class="filter ">People</button>
+			<button id="daynight" class="filter ">Day & night</button>
+			<button id="health" class="filter ">Health</button>
+			<button id="misc" class="filter ">Misc</button>
+			<select id="tags" class="filter "></select>
 		</div>
 
 	
