Align factory house orientation to simulator's orientation

--- a/objects/houseBuildingsFactoryViewer.html
+++ b/objects/houseBuildingsFactoryViewer.html
@@ -89,16 +89,16 @@
 
 			switch( houseDir )
 			{
-				case 0:
+				case 1/**0**/:
 					ctx.fillRect(0,0,SIZE,s);
 					break;
-				case 1:
+				case 0/**1**/:
 					ctx.fillRect(SIZE-s,0,s,SIZE);
 					break;
-				case 2:
+				case 3/**2**/:
 					ctx.fillRect(0,SIZE-s,SIZE,s);
 					break;
-				case 3:
+				case 2/**3**/:
 					ctx.fillRect(0,0,s,SIZE);
 					break;
 			}
